--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "@testing-library/user-event": "^13.5.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "depcheck": "^1.4.3",
     "express": "^4.18.2",
     "fa-icons": "^0.2.0",
     "font-awesome": "^4.7.0",
-    "mongodb": "^5.3.0",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
