--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "depcheck": "^1.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fa-icons": "^0.2.0",
     "font-awesome": "^4.7.0",
